--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "freecodecamp-backend-course-projects",
-	"main": "server.js",
-  "author": "Adedoyin Simeon Adeyemi",
-	"scripts": {
-		"start": "node server.js"
-	},
+  "name": "fcc-learn-node-with-express",
+  "version": "0.1.0",
   "dependencies": {
-		"express": "^4.14.0"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/SimeonDee/freecodecamp-backend-course-projects.git"
-	}
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.14.0",
+    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  }
 }
